0.9.0: (Future)
Emulation fixes:
 - ARM: Fix ALU reading PC after shifting
 - GBA Memory: Misaligned SRAM writes are ignored
Other fixes:
 - Qt: Only dynamically reset video scale if a game is running
 - Qt: Fix race condition with proxied video events

0.8.0: (2020-01-21)
Features:
 - Improved logging configuration
 - One-Player BattleChip/Progress/Beast Link Gate support
 - Add Game Boy Color palettes for original Game Boy games
 - Debugger: Add unary operators and memory dereferencing
 - GB: Expose platform information to CLI debugger
 - Support Discord Rich Presence
 - Debugger: Add tracing to file
 - Enhanced map viewer, supporting bitmapped GBA modes and more displayed info
 - OpenGL renderer with high-resolution upscaling support
 - Experimental high level "XQ" audio for most GBA games
 - Interframe blending for games that use flicker effects
 - Frame inspector for dissecting and debugging rendering
 - Switch: Option to use built-in brightness sensor for Boktai
 - Ports: Ability to enable or disable all SGB features (closes mgba.io/i/1205)
 - Ports: Ability to crop SGB borders off screen (closes mgba.io/i/1204)
 - Cheats: Add support for loading Libretro-style cht files
 - GBA Cheats: Add support for loading EZ Flash-style cht files
 - Support for unlicensed Wisdom Tree Game Boy mapper
 - Qt: Add export button for tile view (closes mgba.io/i/1507)
 - Qt: Add recent game list clearing (closes mgba.io/i/1380)
 - GB: Yanking gamepak now supported
 - Qt: Memory range dumping (closes mgba.io/i/1298)
Emulation fixes:
 - GB: Fix using boot ROM with MMM01 games
 - GB Audio: Only reset channel 3 sample in DMG mode
 - GB Audio: Sample inactive channels (fixes mgba.io/i/1455, mgba.io/i/1456)
 - GB Audio: Fix channel 4 volume (fixes mgba.io/i/1529)
 - GB I/O: Filter IE top bits properly (fixes mgba.io/i/1329)
 - GB Memory: Better emulate 0xFEA0 region on DMG, MGB and AGB
 - GB Video: Delay LYC STAT check (fixes mgba.io/i/1331)