@@ -1,6 +1,7 @@
 0.9.0: (Future)
 Emulation fixes:
  - ARM: Fix ALU reading PC after shifting
+ - ARM: Fix STR storing PC after address calculation
  - GBA Memory: Misaligned SRAM writes are ignored
 Other fixes:
  - Qt: Only dynamically reset video scale if a game is running
